Modificação no texto do cabeçalho

--- a/git-workflow.html
+++ b/git-workflow.html
@@ -55,7 +55,7 @@
             </div>
 
             <footer>
-                <h2>Lorena Fernandes Silva <br> 10/11/2023</h2>
+                <h2>Lorena Fernandes e Isabella Farias<br> 10/11/2023</h2>
             </footer>    
 
 </body>
